Frontend: Use 'fa-sliders' for page configuration to avoid confusion
The vault settings icon was the same and was too close to it

--- a/frontend/src/assets/font-awesome.css
+++ b/frontend/src/assets/font-awesome.css
@@ -315,6 +315,10 @@
     content: "\f074";
 }
 
+.fa-sliders::before {
+    content: "\f1de";
+}
+
 .fa-spinner::before {
     content: "\f110";
 }
